test_scripts/errors/multiline_struct_construct_span.shm
struct Point {
    x, y
}

Point(
    1,
    2,
    3
);
